Fix minor z-index problem

--- a/VersionControlForTextFields.css
+++ b/VersionControlForTextFields.css
@@ -67,7 +67,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 99;
+    z-index: 98;
     display: block;
     position: absolute;
     background-repeat: no-repeat;
